# FoodShot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
api/: webhook.py
bot/: i18n_manager.py  i18n_middleware.py  states.py
bot/handlers/: common.py  history.py  photo.py  settings.py  start.py
core/: config.py  i18n.py
db/: crud.py  database.py  models.py
doc/: MVP.md
locales/en/: messages.ftl
locales/uk/: messages.ftl
services/: calc.py  nutrition.py  vision.py
