[tool.poetry]
name = "foodshot"
version = "0.1.0"
description = "Telegram bot for people with diabetes: food photo -> calorie count + insulin dose recommendation"
authors = ["soroqn <yaroslavsorocan89@gmail.com>"]
readme = "README.md"
packages = [{include = "bot"}, {include = "db"}, {include = "services"}, {include = "core"}, {include = "api"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.15.0"
fastapi = "^0.115.0"
uvicorn = "^0.27.1"
pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
redis = "^5.2.0"
openai = "^1.54.0"
httpx = "^0.27.0"
python-multipart = "^0.0.12"
greenlet = "^3.1.1"
aiogram-i18n = {extras = ["fluent"], version = "^1.4.1"}
fluent-runtime = "^0.4.0"
"fluent.compiler" = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
